--- a/config/gateway.yml
+++ b/config/gateway.yml
@@ -10,3 +10,13 @@ zuul:
     api-index:
       path: /api/index/**
       serviceId: index
+  host:
+    connect-timeout-millis: 60000
+    socket-timeout-millis: 60000
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 60000
