--- a/config/gateway.yml
+++ b/config/gateway.yml
@@ -23,3 +23,6 @@ hystrix:
         isolation:
           thread:
             timeoutInMilliseconds: 60000
+ribbon:  
+  ReadTimeout: 60000  
+  ConnectTimeout: 60000  
